# ChangeLog for app-emulation/aqemu
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> +aqemu-0.7.3.ebuild:
  recommit in my personal overlay
