@@ -1,4 +1,4 @@
 DIST aqemu-0.7.3.tar.bz2 610479 RMD160 2c25e4a21cf9d62062f9e904723088b8c61f80d8 SHA1 39c4a9ee50cd425dd3025212e5937f8a8ff09b43 SHA256 9654e44eb3a19cff473e86e4b00291c536081df9d52887e5148ae520f45e47e1
-EBUILD aqemu-0.7.3.ebuild 1474 RMD160 7acf05efab4e1e88a80b4d266e275b46016928e8 SHA1 d6929466f7db9fdd7c5f07aba25de0569c1346f4 SHA256 34611179abf82b42aabc614240cc5ebef5a0f5f4f572f62de519688813ab2965
-MISC ChangeLog 229 RMD160 09a91e4fa854f72100d5b536307b84e4829c089a SHA1 1a4d938069c30667708987400eab0a2ca72f4eae SHA256 c31efda9a57cffe8f9b5066646ff827d9bf23816d4a51dc5316c933cdf737f66
+EBUILD aqemu-0.7.3-r1.ebuild 1431 RMD160 7572e08db2d6a6f7b45fb99c10a8a066ee75bd91 SHA1 797b2f00ec6598881f4fafcf40b07ff1a379d0d2 SHA256 2953fde4fcfcfd93474f83c749656ec7b8394bfe6fbf4654430227d53d4222ad
+MISC ChangeLog 404 RMD160 53d021bbc6d043232019406c43ecd7fcc09d671a SHA1 d5cc5e4fbae3c807b51008a33d2f7e6784ca1add SHA256 24ade6c103661190a6476bfaa27ff4e062141edebbc887ffa17a527eef9a1837
 MISC metadata.xml 425 RMD160 894001e245346842e5e96c6938bd7ca83ab668e6 SHA1 fb581940ac27ad25db108515da6cb49b5f359b00 SHA256 71496d80c0c48d9c3c49e6a58354f24e076fa7f3dd92642e175bd6304ec269c8
